[package]
name = "p2p"
version = "0.1.0"
authors = ["Erfan <erfanabedi.78@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rand = "0.7"
lazy_static = "1.4.0"
simple_logger = "1.6.0"
clap = "3.0.0-beta.1"